@@ -4,6 +4,9 @@
 	Add a comment about
 	nautilus_menu_provider_emit_items_updated_signal().
 
+	* src/common/na-iio-provider.c:
+	Sort the actions in the same order as they are displayed.
+
 	* src/nact/nact-assistant.c:
 	* src/nact/nact-assistant.h:
 	Implement a work-around for bug #589745 (apply message).
